ENYO - 2319 : fixe buttons look on Safari

--- a/ares/Ares.css
+++ b/ares/Ares.css
@@ -301,8 +301,10 @@ body {
 	cursor:hand; 
 	cursor:pointer;  
     border:1px solid #999999; /* rgba(15,15,15,0.2); */ 
-    background: url(../ares/assets/images/hp_ep_sprite_horizontal.png) repeat-x 0px 0px #a7a9ac; 
-    min-width:75px; position:relative;
+    background: url(../ares/assets/images/hp_ep_sprite_horizontal.png) repeat-x 0px 0px #a7a9ac;
+    background-size: auto; 
+    min-width:75px; 
+    position:relative;
     box-shadow: inset 0px .5px 0px rgba(255, 255, 255, 0.2);
     color: #fff;
     font-weight: 100;
